stuff
- Updated mixin compatibility level. (JAVA 8 -> JAVA 21)
- Moved JEI integration to a new folder. (`recipes` -> `inregration.jei`)
- Moved `SurfaceScannerSable` to `integration.sable`
- Added search aliases for Turbine Blades (`turbine`) & Engine Cylinders (`piston`)