@@ -1,8 +1,9 @@
-package com.drmangotea.tfmg.recipes.jei;
+package com.drmangotea.tfmg.integration.jei.category;
 
 
+import com.drmangotea.tfmg.integration.jei.TFMGJeiConstants;
 import com.drmangotea.tfmg.recipes.CastingRecipe;
-import com.drmangotea.tfmg.recipes.jei.machines.CastingSetup;
+import com.drmangotea.tfmg.integration.jei.render.CastingSetup;
 import com.simibubi.create.compat.jei.category.CreateRecipeCategory;
 import com.simibubi.create.foundation.gui.AllGuiTextures;
 
@@ -13,6 +14,7 @@ import mezz.jei.api.recipe.RecipeIngredientRole;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.core.RegistryAccess;
+import net.minecraft.world.item.ItemStack;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 
@@ -25,31 +27,22 @@ public class CastingCategory extends CreateRecipeCategory<CastingRecipe> {
         super(info);
     }
 
-
     @Override
     public void setRecipe(IRecipeLayoutBuilder builder, CastingRecipe recipe, IFocusGroup focuses) {
-
-
-        RegistryAccess registryAccess = Minecraft.getInstance().level.registryAccess();
-        builder
-                .addSlot(RecipeIngredientRole.OUTPUT, 130, 20)
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 130, 20)
                 .setBackground(getRenderedSlot(), -1, -1)
-                .addItemStack(recipe.getResultItem(registryAccess));
+                .addItemStack(TFMGJeiConstants.getSingleResult(recipe));
 
-        addFluidSlot(builder,15,20,recipe.getFluidIngredients().get(0));
+        addFluidSlot(builder,15,20,recipe.getFluidIngredients().getFirst());
 
 
     }
 
     @Override
     public void draw(CastingRecipe recipe, IRecipeSlotsView iRecipeSlotsView, GuiGraphics graphics, double mouseX, double mouseY) {
-        castingSetup
-                .draw(graphics, 72, 40);
-
+        castingSetup.draw(graphics, 72, 40);
 
         AllGuiTextures.JEI_ARROW.render(graphics, 78, 23);
-
-
     }
 
 }
