@@ -1,7 +1,7 @@
-package com.drmangotea.tfmg.recipes.jei;
+package com.drmangotea.tfmg.integration.jei.category;
 
 import com.drmangotea.tfmg.recipes.CokingRecipe;
-import com.drmangotea.tfmg.recipes.jei.machines.CokeOven;
+import com.drmangotea.tfmg.integration.jei.render.CokeOven;
 import com.simibubi.create.compat.jei.category.CreateRecipeCategory;
 import com.simibubi.create.foundation.gui.AllGuiTextures;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
@@ -26,48 +26,29 @@ public class CokingCategory extends CreateRecipeCategory<CokingRecipe> {
     public void setRecipe(IRecipeLayoutBuilder builder, CokingRecipe recipe, IFocusGroup focuses) {
 
 
-        builder
-                .addSlot(RecipeIngredientRole.INPUT, 1, 13)
+        builder.addSlot(RecipeIngredientRole.INPUT, 1, 13)
                 .setBackground(getRenderedSlot(), -1, -1)
-                .addIngredients(recipe.getIngredients().get(0));
+                .addIngredients(recipe.getIngredients().getFirst());
 
-        builder
-                .addSlot(RecipeIngredientRole.OUTPUT, 121, 90)
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 121, 90)
                 .setBackground(getRenderedSlot(), -1, -1)
-                .addItemStack(recipe.getRollableResults().get(0).getStack());
+                .addItemStack(recipe.getRollableResults().getFirst().getStack());
 
         //fluid
-
         if (recipe.getFluidResults().size() >= 2)
             addFluidSlot(builder, 160, 46, recipe.getFluidResults().get(1));
         if (!recipe.getFluidResults().isEmpty())
             addFluidSlot(builder, 160, 22, recipe.getFluidResults().get(0));
-        // builder
-        //         .addSlot(RecipeIngredientRole.OUTPUT, 160, 46)
-        //         .setBackground(getRenderedSlot(), -1, -1)
-        //         .addIngredient(ForgeTypes.FLUID_STACK, withImprovedVisibility(recipe.getFluidResults().get(1)))
-        //         .addRichTooltipCallback(addFluidTooltip(recipe.getFluidResults().get(1).getAmount()));
-//
-        // builder
-        //         .addSlot(RecipeIngredientRole.OUTPUT, 160, 22)
-        //         .setBackground(getRenderedSlot(), -1, -1)
-        //         .addIngredient(ForgeTypes.FLUID_STACK, withImprovedVisibility(recipe.getFluidResults().get(0)))
-        //         .addRichTooltipCallback(addFluidTooltip(recipe.getFluidResults().get(0).getAmount()));
-
     }
 
     @Override
     public void draw(CokingRecipe recipe, IRecipeSlotsView iRecipeSlotsView, GuiGraphics graphics, double mouseX, double mouseY) {
-        cokeOven
-                .draw(graphics, 65, 50);
+        cokeOven.draw(graphics, 65, 50);
+
         AllGuiTextures.JEI_ARROW.render(graphics, 20, 15);
-
-
         AllGuiTextures.JEI_ARROW.render(graphics, 115, 25);
         AllGuiTextures.JEI_ARROW.render(graphics, 115, 50);
-
         AllGuiTextures.JEI_DOWN_ARROW.render(graphics, 115, 73);
-
     }
 
 }
